--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-732.2KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇨🇳 中国-2.34MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-1.28MB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇳🇱 荷兰-977.3KB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-897.3KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇹 意大利-694.7KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇨🇳 中国-2.34MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-732.2KB/s(Youtube:不良林), server: 92.38.176.81, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇩🇪 德国-908.7KB/s(Youtube:不良林), server: 162.55.231.78, port: 443, type: ssr, cipher: aes-128-ctr, password: sEscPBiAD9K$&@79, protocol: auth_aes128_md5, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
+  - {name: 🇳🇱 荷兰-2.65MB/s(Youtube:不良林), server: 104.255.65.112, port: 30718, type: vmess, uuid: f0f63386-d747-4d44-8d16-6e2d254f0ed3, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇺🇸 美国-156.2KB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
   - {name: 🇺🇸 美国-1.18MB/s(Youtube:不良林), server: 138.68.248.130, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 香港-8.35MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 6003, type: trojan, password: 97808a17-2e97-3840-8a36-b7bc5203200c, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-363.7KB/s(Youtube:不良林), server: azhj001.xiba1.xyz, port: 20718, type: trojan, password: 97808a17-2e97-3840-8a36-b7bc5203200c, sni: azhj001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.00MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.28MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-977.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-897.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-694.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-908.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-156.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-8.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-363.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.28MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-977.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-897.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-694.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-908.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-156.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-8.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-363.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.28MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-977.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-897.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-694.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-908.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-156.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-8.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-363.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-8.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-363.7KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.28MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-977.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-897.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-694.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-908.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-156.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-8.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-363.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.28MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-977.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-897.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-694.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-908.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-156.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-8.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-363.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.28MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-977.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-897.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-694.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-908.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-156.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-8.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-363.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.33MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-1.28MB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-977.3KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-897.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-708.1KB/s(Youtube:不良林)
-      - 🇮🇹 意大利-694.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.34MB/s(Youtube:不良林)
+      - 🇺🇸 美国-732.2KB/s(Youtube:不良林)
+      - 🇩🇪 德国-908.7KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-2.65MB/s(Youtube:不良林)
       - 🇺🇸 美国-156.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.18MB/s(Youtube:不良林)
+      - 🇭🇰 香港-8.35MB/s(Youtube:不良林)
+      - 🇭🇰 香港-363.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.00MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
